--- a/netbsd/homebuilt_computer.html
+++ b/netbsd/homebuilt_computer.html
@@ -14,7 +14,7 @@
 
 <p>計算資源の非力さを補うためにクラウドサービスを使って一時的にハイパワーなマシンを借りるということもしました。Webコンソールへログインするのが面倒なことから、サービスのAPIを叩いてCUIでマシンの起動や停止、性能の変更をおこなうプログラムをPythonで実装しさえもしました。このやり方は高価なマシンを所有する必要がなく経済的だったのですが、NetBSD-currentのHEADをクラウド上のマシンでも追いかけるのが面倒で段々と使わなくなりました。</p>
 
-<p>AMDのRyzenが高速なわりに安く手に入り、build.shの実行もすぐに終わるという話は前から耳にしていました。くわえて個人的には自作パソコンを作ったことがなく、興味はあったのですが特にこれといったモチベーションは湧かずにいました。クラウドでのビルドマシン運用が面倒になってきたのをきっかけに、勉強ついでに自作パソコンを作りそれにNetBSDをインストールして日頃使いのマシン兼ビルドマシンとして運用しようと思い立ちました。</p>
+<p>AMDのRyzenが高速なわりに安価で、build.shの実行がすぐ終わるという話は前から耳にしていました。くわえて個人的には自作パソコンを作ったことがなく、興味はあったのですが特にこれといったモチベーションは湧かずにいました。クラウドでのビルドマシン運用が面倒になってきたのをきっかけに、勉強ついでに自作パソコンを作りそれにNetBSDをインストールして日頃使いのマシン兼ビルドマシンとして運用しようと思い立ちました。</p>
 
 <ul>
 <li><a href="#configure">マシン構成</a></li>
@@ -43,21 +43,21 @@
 </tbody>
 </table>
 
-<p>端から確定していたのはCPUとマザーボードだけで、あとは店員さんからの説明とおすすめを聞いた上で僕が選びました。見積もりよりコンサルタントと言ったほうがより正確でしょうか。ポイントの差し引きをして工具セットも付けた結果、計104,190円となりました。即決です。</p>
+<p>端から確定していたのはCPUとマザーボードだけで、あとは店員さんからの説明とおすすめを聞いたうえで僕が選びました。見積もりよりコンサルタントと言ったほうがより正確でしょうか。ポイントの差し引きをして工具セットも付けた結果、計104,190円となりました。即決です。</p>
 
 <p>ザックにパーツを入れ、入り切らないパーツは紙袋に、ケースは外装箱にプラスチックの取っ手をつけてもらい家まで持ち帰りました。両手がふさがっているのとPCケースの大きさから、改札を通るのには苦労しました。</p>
 
 <h2 id="troubles">トラブル</h2>
 
 <h3 id="misbuilt">メモリを半挿し</h3>
-<p>いざパーツを開封し組み立てたはいいものの、電源を入れモニタに接続しても"<b>no input signal</b>"と表示されたきりなにも映りませんでした。グラフィックボードの接触不良を疑ったりCPUの挿し方がまずかったのかなと思い、組み立て直してからまた電源を入れたものの改善の兆しはありませんでした。</p>
+<p>いざパーツを開封し組み立てたはいいものの、電源を入れモニタに接続しても"<b>no input signal</b>"と表示されたきりなにも映りませんでした。グラフィックボードの接触不良を疑ったり、CPUの挿し方がまずかったのかなと思い組み立て直してからまた電源を入れたりしたものの、改善の兆しはありませんでした。</p>
 
 <p>調べるとパソコンのパーツの中で壊れやすく相性の問題もあるパーツはマザーボードとメモリそしてグラフィックボードらしく、相性や初期不良を疑ってみることにしました。そこで後日、ツクモに相性保証をつけていたマザーボードとメモリを持ち込み、動作チェックを依頼したのですが結果は「問題なし」とのことでした。</p>
 
 <p>帰り際に「メモリスロットの片側にだけツメがあるタイプは、ツメが無い側のメモリがしっかり挿さっているか確認したほうがいいですよ」と教えてもらいました。持ち込んだパーツ以外の初期不良や相性もあるかもしれないし……という不安と共に帰宅し、ものは試しとちょっと強めに力を入れメモリを挿し込んでみると、前は聞かなかった「カチリ」という音が。確信を胸に電源を入れてみると、みごとBIOS画面が出てきたのです。初期不良や相性云々はすべて思い違いで、単なる組み立てミスだったわけでした。</p>
 
 <h3 id="x11">Xが立ち上がらない</h3>
-<p>主な用途はビルドであると言いえど日頃使いのマシンとしても使うわけですから、Xは立ちあがってもらわないと困ります。そして困りました。購入したRadeon RX560はNetBSDでは使えなさそうだったのです。amdgpuを有効にしたカーネルをビルドし、<code>x11/xf86-video-amdgpu</code>をインストールして<code>X -configure</code>しても<code>no screens found</code>と出てXが立ち上がりませんでした。</p>
+<p>主な用途はビルドと言いえど日頃使いのマシンとしても使うわけですから、Xは立ちあがってもらわないと困ります。そして困りました。購入したRadeon RX560はNetBSDでは使えなさそうだったのです。amdgpuを有効にしたカーネルをビルドし、<code>x11/xf86-video-amdgpu</code>をインストールして<code>X -configure</code>しても<code>no screens found</code>と出てXが立ち上がりませんでした。</p>
 
 <p>たしかに<a href="https://netbsd.gw.com/cgi-bin/man-cgi?radeon+4">radeon(4)</a>にはRX560と書いてはいません。amdgpu(4)にも特に型番は明記されていません。自らの調査不足を反省し、今度は<code>x11/xf86-video-nouveau</code>のnouveau(4)にしっかり書かれているNVIDIA GeForce 1050Tiを購入しました。nouveauを有効にしたカーネルをビルドして再度挑戦することに。</p>
 
