--- a/netbsd/homebuilt_computer.html
+++ b/netbsd/homebuilt_computer.html
@@ -65,7 +65,7 @@
 
 <p>結局どうしたか？オチとしてはNetBSDの代わりにFreeBSDをインストールし、NetBSD特有の処理をしたいときはbhyveを使い仮想マシン上のNetBSDを触ることに決めました。本当はネイティブなNetBSDをデスクトップ環境として使いたかったのですが最終的に妥協したということです。FreeBSDはnvidia-driver-390.87_3パッケージを入れ、問題なく動いています。</p>
 
-<p>一応、最後のあがきとしてNVIDIAの公式サイトからLinux用のドライバをダウンロードし、Linuxエミュレーションでそのドライバを動かそうともしました。FreeBSDのグラフィック系のドライバはLinuxエミュレーションで動くものもあるというのをヒントにしたのです。しかし、<b>startx</b>した時点でNVIDIAのドライバがLinuxの共有ライブラリを読み込んでくれず、僕がやってみた範囲では失敗に終わりました。結構よさそうなアイデアだと思ったのですが残念です。もしかすると工夫しだいでどうにかなったのかもしれませんが、もし同じ構成でXまで動かせた人がいればやり方を教えてください。</p>
+<p>一応、最後のあがきとしてNVIDIAの公式サイトからLinux用のドライバをダウンロードし、Linuxエミュレーションでそのドライバを動かそうともしました。FreeBSDのグラフィック系のドライバはLinuxエミュレーションで動くものもあるというのをヒントにしたのです。しかし、<b>startx</b>した時点でNVIDIAのドライバがLinuxの共有ライブラリを読み込んでくれず、僕がやってみた範囲では失敗に終わりました。結構よさそうなアイデアだと思ったのですが残念です。もしかすると工夫次第でどうにかなったのかもしれませんが、もし同じ構成でXまで動かせた人がいればやり方を教えてください。</p>
 
 <h2 id="buildspeed">build.shがどれくらい速く終わるか？</h2>
 <p>ベンチマークとして、ネイティブなNetBSD/amd64システムで<code>build.sh</code>からi386バイナリをクロスビルドしました。ツールチェイン、GENERICカーネル、ディストリビューションのビルド結果は以下のとおりです。</p>
