--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <h2 id="links">外部リンク</h2>
 <dl>
-<dt><a href="https://com/user340"><b>GitHub</b></a></dt>
+<dt><a href="https://github.com/user340"><b>GitHub</b></a></dt>
 <dd>余暇で書いたコードはなるべくGitHubのリポジトリへpushすることにしています。</dd>
 <dt><a href="https://www.netbsd.org/~uki/"><b>uki@NetBSD.org</b></a></dt>
 <dd>NetBSD.orgのWebサーバ上で公開しているページです。</dd>
