Fix mistake of list tags

--- a/netbsd/zabbix.html
+++ b/netbsd/zabbix.html
@@ -12,14 +12,14 @@
 <hr>
 <ol>
 <li><a href="#zabbix">Zabbixについて</a></li>
-<li><a href="#installation">インストール</a></li>
+<li><a href="#installation">インストール</a>
 <ol>
 <li><a href="#sysutils-zabbix">sysutils/zabbixのインストール</a></li>
 <li><a href="#sysutils-zabbix-frontend">sysutils/zabbix-frontendのインストール</a></li>
 <li><a href="#agent">Zabbix Agentの設定と起動</a></li>
 <li><a href="#server">Zabbix Serverの設定と起動</a></li>
 <li><a href="#frontend">Zabbix Webフロントエンドの設定</a></li>
-</ol>
+</ol></li>
 </ol>
 
 <h2 id="zabbix">Zabbixについて</h2>
