Add nvidia driver picture

--- a/netbsd/homebuilt_computer.html
+++ b/netbsd/homebuilt_computer.html
@@ -65,6 +65,8 @@
 
 <p>結局どうしたか？オチとしてはNetBSDの代わりにFreeBSDをインストールし、NetBSD特有の処理をしたいときはbhyveを使い仮想マシン上のNetBSDを触ることに決めました。本当はネイティブなNetBSDをデスクトップ環境として使いたかったのですが最終的に妥協したということです。FreeBSDはnvidia-driver-390.87_3パッケージを入れ、問題なく動いています。</p>
 
+<img src="./images/homebuilt_003.png" alt="NVIDIA driver on FreeBSD">
+
 <p>一応、最後のあがきとしてNVIDIAの公式サイトからLinux用のドライバをダウンロードし、Linuxエミュレーションでそのドライバを動かそうともしました。FreeBSDのグラフィック系のドライバはLinuxエミュレーションで動くものもあるというのをヒントにしたのです。しかし、<b>startx</b>した時点でNVIDIAのドライバがLinuxの共有ライブラリを読み込んでくれず、僕がやってみた範囲では失敗に終わりました。結構よさそうなアイデアだと思ったのですが残念です。もしかすると工夫次第でどうにかなったのかもしれませんが、もし同じ構成でXまで動かせた人がいればやり方を教えてください。</p>
 
 <h2 id="buildspeed">build.shがどれくらい速く終わるか？</h2>
@@ -133,7 +135,7 @@
 
 <img src="./images/homebuilt_002.jpg" alt="parts">
 
-<p>そういうわけで僕の初自作パソコンはソフトの部分で失敗というか妥協に終わってしまったのですが、それでもデスクトップ環境はいつも以上に快適に動いていますし、ビルドも従来よりかなり速いためそこそこ満足しています。NetBSDはクロスビルドができるので、OSがNetBSDでなくてもNetBSDのビルド自体はできてしまいます。</p>
+<p>そういうわけで僕の初自作パソコンはソフトの部分で失敗というか妥協に終わってしまったのですが、それでもデスクトップ環境はいつも以上に快適に動いていますし、ビルドも従来よりかなり速いためそこそこ満足しています。NetBSDはクロスビルドができるので、OSがNetBSDでなくてもNetBSDのビルド自体はできてしまいます。たとえばFreeBSD-amd64上でNetBSD-sparc64のビルドができてしまうのです。</p>
 
 <p>パーツの組み立てはプラスドライバ一本で終わり、思っていたよりも簡単でした。一番難しいと感じた作業を挙げるとすれば、フロントパネル用のピンヘッダをマザーボードに取り付ける作業でしょうか。マザーボードの説明書とにらめっこしながらどこになにを挿すか慎重に探りました。</p>
 
