--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 </ul>
 <h3 id="essay">エッセイ</h3>
 <ul>
+<li><a href="./essay/github_actions.html">GitHub ActionsでホームページのCIを確立した</a></li>
 <li><a href="./essay/freeware_or_freesoftware.html">フリーウェアはフリーソフトウェアであるべきか？</a></li>
 <li><a href="./essay/floss_reading.html">FLOSS書籍について</a></li>
 <li><a href="./essay/remote_work.html">リモートワーカーになった</a></li>
