--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <h2 id="free_documents">自由な文書の一覧</h2>
 <ul>
 <li>Sam Williams, Richard M. Stallman, 後藤洋 弓削光好 訳, 『<a href="./books/free_as_in_freedom/index.html">自由としてのフリー(2.0) リチャード・ストールマンと自由ソフトウェア革命</a>』</li>
+<li>Hyperbola Project, 『<a href="./books/rusts_freedom_flaws/index.html">Rustの不自由</a>』</li>
 </ul>
 
 <h2 id="fingerprint">フィンガープリント</h2>
