Add my opinion at head

--- a/books/chromiums_freedom_flaws/index.html
+++ b/books/chromiums_freedom_flaws/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
 <article class="book">
-<p>原文は<a href="https://wiki.hyperbola.info/doku.php?id=en:main:chromiums_freedom_flaws">Chromium's Freedom Flaws</a>。Wikiなので翻訳と原文がズレるかもしれません。当訳は<code>2019/10/13 19:59 by emulatorman</code>時点のものです。かなり怪しい箇所が多いので、誤訳の指摘や翻訳の提案などがあればぜひuki@e-yuuki.orgにご連絡ください。</p>
+<p>原文は<a href="https://wiki.hyperbola.info/doku.php?id=en:main:chromiums_freedom_flaws">Chromium's Freedom Flaws</a>。Wikiなので翻訳と原文がズレるかもしれません。当訳は<code>2019/10/13 19:59 by emulatorman</code>時点のものです。かなり怪しい箇所が多いので、誤訳の指摘や翻訳の提案などがあればぜひuki@e-yuuki.orgへご連絡ください。</p>
 
+<p>Googleは偉大なエンジニアリング集団で、僕たちのほとんどが（少なくとも僕は）毎日Googleの製品やサービスをなにかしらのかたちで享受しています。しかしメディアでよく槍玉に挙げられるようにGoogleはなにかしらの問題をつねに抱えています。</p>
+
+<p>フリーソフトウェア運動から見たGoogleの製品にはどのような問題があり、フリーソフトウェア推進派はいかにしてその問題に立ち向かっているのか？が分かります。構造は巨大な権力を持つ大企業 対 理想主義者集団のようで、一見後者が劣勢のようにみえますが、それでも希望はあるようです。</p>
 <hr>
 
 <ol style="list-style:none">
