--- a/essay/free_flaws.html
+++ b/essay/free_flaws.html
@@ -75,11 +75,11 @@ This malicious feature is known as Digital Restrictions Management (DRM) (see ou
 
 <p>Linuxカーネル開発のセキュリティに対する意識への批判はあまり説得力があるように思えません。grsecurityはGPLv2に独自の制限を加えてパッチを提供しています。そのせいでgrsecurityがフリーソフトウェアではなくなったことと、Linuxカーネルの開発がセキュリティを意識しなくなったことは別問題のように思えます。またカーネルをOpenBSDへ移行したからといって、現在のLinuxカーネル以上のセキュリティを保てるかどうかを測定できません。</p>
 
-<p>GNU/Linuxにおいて多くのコンポーネントが特定のソフトウェアに依存してしまっている問題は、GNU/Linuxディストリビューションに限った問題ではありません。GNU/Linux上でそれら抜きのシステムを作れないならBSDでも作れないでしょう。現にHyperbolaでは脱systemdを達成できており、なぜBSDへ移行する理由に挙げるのか不明です。個人的には、これは単なる不満の後付け・かさ増しでしかないようにみえます。</p>
+<p>GNU/Linuxにおいて多くのコンポーネントが特定のソフトウェアに依存してしまっている問題は、GNU/Linuxディストリビューションに限った問題ではありません。GNU/Linux上でそれら抜きのシステムを作れないならBSDでも作れないでしょう。現にHyperbolaでは脱systemdを達成できており、なぜBSDへ移行する理由にsystemdを挙げるのか不明です。個人的には、これは単なる不満の後付け・かさ増しでしかないようにみえます。</p>
 
 <h2>おわりに</h2>
-<p>一見、フリーソフトウェア推進派の戦いの狼煙があがったように見えて、よく読んでみれば論理武装が十分ではありません。早急すぎる判断だと思います。せめて決定に至るまでの議論が追えるリンクも付け加えて欲しかったものです。</p>
+<p>一見、フリーソフトウェア推進派の戦いの狼煙があがったように見えて、よく読んでみれば論理武装が十分ではなく拍子抜けしました。いくらGNU/Linuxに対し不満を抱えているとはいえ早急すぎる判断だと思います。せめて決定に至るまでの議論が追えるリンクも付け加えて欲しかったものです。</p>
 
-<p>この決定によってHyperbolaBSDが大成功を収め、BSDユーザの増加に寄与し、BSDコミュニティが世界的ににぎやかになるならそれに越したことはありません。しかし現時点では実装よりも思想が先行してしまったのではないかと感じます。</p>
+<p>この決定によってHyperbolaBSDが大成功を収め、BSDユーザの増加に寄与し、BSDコミュニティが世界的ににぎやかになるならそれに越したことはありません。しかし現時点では実装よりもフリーソフトウェア主義が先行して物事が決められてしまい、結果として既存のHyperbolaユーザを思想のふるいにかけているだけなのではないかと感じます。</p>
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
