Add java things

--- a/essay/free_flaws.html
+++ b/essay/free_flaws.html
@@ -75,7 +75,7 @@ This malicious feature is known as Digital Restrictions Management (DRM) (see ou
 
 <p>Linuxカーネル開発のセキュリティに対する意識への批判はあまり説得力があるように思えません。grsecurityはGPLv2に独自の制限を加えてパッチを提供しています。そのせいでgrsecurityがフリーソフトウェアではなくなったことと、Linuxカーネルの開発がセキュリティを意識しなくなったことは別問題のように思えます。またカーネルをOpenBSDへ移行したからといって、現在のLinuxカーネル以上のセキュリティを保てるかどうかを測定できません。</p>
 
-<p>GNU/Linuxにおいて多くのコンポーネントが特定のソフトウェアに依存してしまっている問題は、GNU/Linuxディストリビューションに限った問題ではありません。GNU/Linux上でそれら抜きのシステムを作れないならBSDでも作れないでしょう。現にHyperbolaでは脱systemdを達成できており、なぜBSDへ移行する理由にsystemdを挙げるのか不明です。個人的には、これは単なる不満の後付け・かさ増しでしかないようにみえます。</p>
+<p>GNU/Linuxにおいて多くのコンポーネントが特定のソフトウェアに依存してしまっている問題は、GNU/Linuxディストリビューションに限った問題ではありません。GNU/Linux上でそれら抜きのシステムを作れないならBSDでも作れないでしょう。現にHyperbolaでは脱systemdを達成できており、なぜBSDへ移行する理由にsystemdを挙げるのか不明です。個人的には、これは単なる不満の後付け・かさ増しでしかないようにみえます。特にJavaに対する批判は<a href="https://www.phoronix.com/forums/forum/software/bsd-mac-os-x-hurd-others/1147551-fsf-approved-hyperbola-gnu-linux-switching-out-the-linux-kernel-for-hard-fork-of-openbsd?p=1147581#post1147581">Phoronixのコメント</a>でも指摘されているように的外れです。この批判は<a href="https://savannah.gnu.org/bugs/?func=detailitem&item_id=57217">GNU gettextへのパッチ投稿</a>をもとにされているようですが、パッチ投稿者はgettextのメンテナBruno Haibleの回答になんら反応をしておらず、むしろHyperbolaプロジェクト側の株を落としているようにさえみえます。</p>
 
 <h2>おわりに</h2>
 <p>一見、フリーソフトウェア推進派の戦いの狼煙があがったように見えて、よく読んでみれば論理武装が十分ではなく拍子抜けしました。いくらGNU/Linuxに対し不満を抱えているとはいえ早急すぎる判断だと思います。せめて決定に至るまでの議論が追えるリンクも付け加えて欲しかったものです。</p>
