Practice of combination bhyve and ZFS to netbsd sandbox

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <h3><a href="./introduction/index.html">Unix入門</a></h3>
 <h3 id="netbsd">NetBSD</h3>
 <ul>
+<li><a href="./netbsd/testing_with_bhyve.html">vm-bhyveとZFSを使って効率的にNetBSD仮想マシンを管理する</a></li>
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
 <li><a href="./netbsd/haxm.html">QEMUとHAXMによるハイパーバイザの利用</a></li>
 <li><a href="./netbsd/nvmm.html">QEMUとNVMMによるハイパーバイザの利用</a></li>
