Delete inactive writings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <ol>
 <li><a href="#articles">記事</a>
 <ol>
-<li><a href="./introduction/index.html">Unix入門</a></li>
 <li><a href="#netbsd">NetBSD</a></li>
 <li><a href="#coding">コーディング</a></li>
 <li><a href="#essay">エッセイ</a></li>
@@ -28,7 +27,7 @@
 </ol>
 
 <h2 id="articles">記事</h2>
-<h3><a href="./introduction/index.html">Unix入門</a></h3>
+
 <h3 id="netbsd">NetBSD</h3>
 <ul>
 <li><a href="./netbsd/testing_with_bhyve.html">vm-bhyveとZFSを使って効率的にNetBSD仮想マシンを管理する</a></li>
@@ -42,7 +41,7 @@
 <li><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></li>
 <li><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></li>
 <li><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></li>
-<li><a href="./introduction/npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
+<li><a href="./netbsd/npf.html">npfを使ってファイアウォールを設定する</a></li>
 <li><a href="./netbsd/zfs.html">ZFS on NetBSD</a></li>
 <li><a href="./netbsd/zabbix.html">ZabbixによるNetBSDシステム監視</a></li>
 <li><a href="./netbsd/homebuilt_computer.html">NetBSDビルド環境を自作パソコンで作る</a></li>
@@ -53,6 +52,7 @@
 <li><a href="./coding/html.html">私家版HTML文書執筆ガイド</a></li>
 <li><a href="./coding/shellscript.html">私家版ShellScript Coding Style</a></li>
 </ul>
+
 <h3 id="essay">エッセイ</h3>
 <ul>
 <li><a href="./essay/free_flaws.html">自由を妨げるものとHyperbolaプロジェクト</a></li>
