--- a/essay/webpage.html
+++ b/essay/webpage.html
@@ -43,7 +43,7 @@ main(void)
 
 <p>このページはHTML 5.2 W3C Recommendation<a id="#rw3c" href="#w3c">[4]</a>に従って書かれている。HTMLとCSSと以外で構成されていないので、リレーショナルデータベースとかPHPなど関係なしにHTTPデーモンさえ動いていれば確実にブラウザで表示できる。僕はこういった原始的な手法による優位性を重んじる傾向にあるらしい。HTMLやCSSの勉強にもなる。</p>
 
-<p>MarkdownもCommonMark<a id="#rcm" href="cm">[5]</a>という規格があるものの、GitHub Flavored Markdown（GFM）<a id="rgfm" href="gfm">[6]</a>に代表されるCommonMarkの拡張版も種類が多くややこしい。</p>
+<p>MarkdownもCommonMark<a id="rcm" href="#cm">[5]</a>という規格があるものの、GitHub Flavored Markdown（GFM）<a id="rgfm" href="#gfm">[6]</a>に代表されるCommonMarkの拡張版も種類が多くややこしい。</p>
 
 <h2>おわり</h2>
 
