About office suite on FreeBSD

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <li><a href="#articles">記事</a>
 <ol>
 <li><a href="#netbsd">NetBSD</a></li>
+<li><a href="#freebsd">FreeBSD</a></li>
 <li><a href="#coding">コーディング</a></li>
 <li><a href="#essay">エッセイ</a></li>
 </ol>
@@ -45,6 +46,11 @@
 <li><a href="./netbsd/zfs.html">ZFS on NetBSD</a></li>
 <li><a href="./netbsd/zabbix.html">ZabbixによるNetBSDシステム監視</a></li>
 <li><a href="./netbsd/homebuilt_computer.html">NetBSDビルド環境を自作パソコンで作る</a></li>
+</ul>
+
+<h3 id="freebsd">FreeBSD</h3>
+<ul>
+<li><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></li>
 </ul>
 
 <h3 id="coding">コーディング</h3>
