--- a/freebsd/office.html
+++ b/freebsd/office.html
@@ -23,10 +23,10 @@
 </ol>
 
 <h2 id="browser">ブラウザの選択について</h2>
-<p>FreeBSDではFirefoxかChrome（Chromium）の二択でしょう。どちらを選ぶか？はさほど重要ではなく個人の自由のようにみえます。しかし社内Webアプリの中にはFirefoxでアクセスすると「Chromeを使ってください」というエラーメッセージとともに利用を拒否されるケースもあります。単にユーザエージェントをもとに判別しているに過ぎないので、<a href="https://addons.mozilla.org/ja/firefox/addon/user-agent-string-switcher/">User-Agent Switcher and Manager</a>のようなユーザエージェントを偽装できる拡張機能を使えば済む場合がほとんどですが、Chromeでないと本当に利用できない機能があったりします。念のためどちらもインストールしておくのが安心でしょう。</p>
+<p>FreeBSDではFirefoxかChrome（Chromium）の二択でしょう。どちらを選ぶか？はさほど重要ではなく個人の自由のようにみえます。しかし社内Webアプリの中にはFirefoxでアクセスすると「Chromeを使ってください」というエラーメッセージとともに利用を拒否されるケースもあります。単にユーザエージェントをもとに判別しているに過ぎないので、<a href="https://addons.mozilla.org/ja/firefox/addon/user-agent-string-switcher/">User-Agent Switcher and Manager</a>のようなユーザエージェントを偽装できる拡張機能を使えば済む場合がほとんどです。しかし本当にChromeでないと利用できない機能があったりします。念のためどちらもインストールしておくのが安心でしょう。</p>
 
 <h2 id="#gsuite">GSuite</h2>
-<p>メールやその他オフィススイートのためにGSuiteを採用しているなら、FreeBSDでも安心して事務用OSとして利用できます。GMailやGoogle Drive、Meetといったアプリケーションはすべて問題なく動作するでしょう。少なくとも僕は、GSuiteのメール・オンラインストレージ・ビデオ通話・各種オフィススイートを使っているときに「このアプリケーションはこの環境に対応していません」のようなエラーメッセージを見かけたことはありません。</p>
+<p>メールやその他オフィススイートのためにGSuiteを採用しているなら、FreeBSDでも安心して事務用OSとして利用できます。GMailやGoogle Drive、Meetといったアプリケーションはすべて問題なく動作します。少なくとも僕は、GSuiteのメール・オンラインストレージ・ビデオ通話・各種オフィススイートを使っているときに「このアプリケーションはこの環境に対応していません」のようなエラーメッセージを見かけたことはありません。</p>
 
 <h2 id="#o365">O365</h2>
 <p>一方でMicrosoftのO365をオフィススイートとして採用しているなら少し注意が必要です。Word・Execl・PowerPointがWeb上で利用できるのはとても便利ですが、次のような問題を見つけています。</p>
@@ -36,6 +36,8 @@
 <li><a href="https://outlook.uservoice.com/forums/907141/suggestions/36851050">FirefoxでO365のWeb版カレンダーにアクセスしたとき、強制的に軽量モードになる。</a>ユーザエージェントを偽装すると解決する。</li>
 </ul>
 
+<p>最近GNU/Linux版のネイティブアプリが公開されたTeamsは、ブラウザからビデオ通話が使えます。</p>
+
 <h2 id="#slack">Slack</h2>
 <p>Slackはチャットツールとして、またビデオ通話用のツールとしても高い評価を得ているようです。しかしFreeBSDではSlackのビデオ通話が使えませんでした。Firefoxではサポートされていない旨のメッセージが表示され、Chromiumでは通話画面がローディングしたまま先に進みません。チャットはなにも問題ありません。</p>
 
@@ -43,7 +45,7 @@
 <p>印刷は特に経費精算をするときに使いますが、ドライバや実行すべきコマンドがいっさい分かっていないのでFreeBSDからなにかを印刷したためしがありません。いつも会社支給のノートPCから印刷してしまいます。</p>
 
 <h2 id="conclution">おわりに</h2>
-<p>まだ一社しか経験しておらず、何十年も会社づとめしているわけではないのでまだ踏んでいない罠があるかもしれません。むしろ、いまは上述したことさえ気をつけていれば快適に事務作業ができるという意味でもあります。特にGSuiteは（提供元のふるまいはともかく）どんな環境でもブラウザさえあればだいたい動きます。デスクトップOSが統一されていないような組織で特に優れているサービスだと言えるでしょう。</p>
+<p>まだ一社しか経験しておらず、何十年も会社づとめしているわけではないのでまだ踏んでいない罠があるかもしれません。むしろ、いまは上述したことさえ気をつけていれば快適に事務作業ができるという意味でもあります。特にGSuiteは（提供元のふるまいはともかく）どんな環境でもブラウザさえあればだいたい動きます。デスクトップOSが統一されていないような組織で特に優れているサービスです。</p>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
