--- a/freebsd/office.html
+++ b/freebsd/office.html
@@ -23,7 +23,7 @@
 </ol>
 
 <h2 id="browser">ブラウザの選択について</h2>
-<p>FreeBSDではFirefoxかChrome（Chromium）の二択でしょう。どちらを選ぶか？はさほど重要ではなく個人の自由のようにみえます。しかし社内Webアプリの中にはFirefoxでアクセスすると「Chromeを使ってください」というエラーメッセージとともに利用を拒否されるケースもあります。単にユーザエージェントをもとに判別しているに過ぎないので、<a href="https://addons.mozilla.org/ja/firefox/addon/user-agent-string-switcher/">User-Agent Switcher and Manager</a>のようなユーザエージェントを偽装できる拡張機能を使えば済む場合がほとんどです。しかし本当にChromeでないと利用できない機能があったりします。念のためどちらもインストールしておくのが安心でしょう。</p>
+<p>FreeBSDではFirefoxかChrome（Chromium）の二択でしょう。どちらを選ぶか？はさほど重要ではなく個人の自由のようにみえます。しかし社内Webアプリの中にはFirefoxでアクセスすると「Chromeを使ってください」というエラーメッセージとともに利用を拒否されるケースもあります。単にユーザエージェントをもとに判別しているに過ぎないので、<a href="https://addons.mozilla.org/ja/firefox/addon/user-agent-string-switcher/">User-Agent Switcher and Manager</a>のようなユーザエージェントを偽装できる拡張機能を使えば済む場合がほとんどです。ですが本当にChromeでないと利用できない機能があったりします。念のためどちらもインストールしておくのが安心でしょう。</p>
 
 <h2 id="#gsuite">GSuite</h2>
 <p>メールやその他オフィススイートのためにGSuiteを採用しているなら、FreeBSDでも安心して事務用OSとして利用できます。GMailやGoogle Drive、Meetといったアプリケーションはすべて問題なく動作します。少なくとも僕は、GSuiteのメール・オンラインストレージ・ビデオ通話・各種オフィススイートを使っているときに「このアプリケーションはこの環境に対応していません」のようなエラーメッセージを見かけたことはありません。</p>
